--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,1 +1,16 @@
-@import "../../node_modules/bootstrap/dist/css/bootstrap.css"
+@import "../../node_modules/bootstrap/dist/css/bootstrap.css";
+
+/* MANIFIESTO main.scss */
+//abstracts
+//vendors
+//base
+@import "base/reset";
+@import "base/images";
+//layout
+
+@import "layout/main";
+
+//components
+@import "components/forms";
+//pages
+//themes
