--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,9 @@
 @import "../../node_modules/bootstrap/dist/css/bootstrap.css";
+/* MANIFIESTO main.scss */
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 
 /*# sourceMappingURL=style.css.map */
