--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,4 +6,20 @@
   box-sizing: border-box;
 }
 
+body {
+  background-color: #2e2d2d;
+  color: #ffffff;
+  font-family: "Raleway", sans-serif;
+  padding-left: 10%;
+  padding-right: 10%;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+.container__imagen {
+  width: 100%;
+}
+
 /*# sourceMappingURL=style.css.map */
