--- a/assets/sass/base/_reset.scss
+++ b/assets/sass/base/_reset.scss
@@ -1,6 +1,17 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-  }
-  
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background-color: #2e2d2d;
+  color: #ffffff;
+  font-family: "Raleway", sans-serif;
+  padding-left: 10%;
+  padding-right: 10%;
+}
+
+html {
+  scroll-behavior: smooth;
+}
