--- a/assets/sass/components/_carousel.scss
+++ b/assets/sass/components/_carousel.scss
@@ -1,8 +1,4 @@
-.carouselExampleIndicators{
-    width: 30%;
-}
-
-.container-carousel-slide{
-    display: flex;
-    width: 40%;
+.carousel-inner {
+    width: 300px;
+    height: 200px;
 }
