--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,4 +22,23 @@ html {
   width: 100%;
 }
 
+.img-fluid {
+  width: 100%;
+  height: 100%;
+}
+
+.image-testimonio {
+  width: 100px;
+  height: 100px;
+  border-radius: 100px;
+  border-color: blue;
+}
+
+.card-img-top {
+  width: 50%;
+  width: 100px;
+  height: 100px;
+  border-radius: 100px;
+}
+
 /*# sourceMappingURL=style.css.map */
