--- a/assets/sass/base/_images.scss
+++ b/assets/sass/base/_images.scss
@@ -2,3 +2,24 @@
     width: 100%;
 }
 
+.img-fluid{
+    width: 100%;
+    height: 100%;
+}
+
+.image-testimonio{
+   
+    width: 100px;
+    height: 100px;
+    border-radius: 100px;
+    border-color: blue;
+   
+}
+
+.card-img-top{
+    width: 50%;
+    width: 100px;
+    height: 100px;
+    border-radius: 100px;
+ 
+}
