--- a/assets/sass/components/_navbar.scss
+++ b/assets/sass/components/_navbar.scss
@@ -1,6 +1,49 @@
-.navbar {
-    background-color: white;
-    display: flex;
-    justify-content: center;
-  }
-  
+.navbar-custom {
+  max-width: 960px; /* Limita el ancho de la navbar */
+  margin: 0 auto; /* Centra la navbar */
+}
+
+.navbar-brand{
+  padding-left: 30%;
+}
+
+.nav {
+  background-color: $yellow;
+  display: flex;
+  justify-content: center;
+}
+
+.nav-container {
+  display: flex;
+  flex-direction: column;
+  width: $layout-width;
+  padding: 0.6rem;
+}
+
+.nav-section {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1rem;
+}
+
+.nav-section__child1 {
+  width: 20%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.nav-section__child2 {
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.nav-section__child3 {
+  width: 30%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
