--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,44 +1,17 @@
-@import "../../node_modules/bootstrap/dist/css/bootstrap.css";
-/* MANIFIESTO main.scss */
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
+/* Error: expected more input.
+ *    ,
+ * 16 | //themes
+ *    |         ^
+ *    '
+ *   assets/sass/main.scss 16:9  root stylesheet */
 
-body {
-  background-color: #2e2d2d;
-  color: #ffffff;
-  font-family: "Raleway", sans-serif;
-  padding-left: 10%;
-  padding-right: 10%;
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
+  display: block;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: "Error: expected more input.\a    \2577 \a 16 \2502  //themes\a    \2502          ^\a    \2575 \a   assets/sass/main.scss 16:9  root stylesheet";
 }
-
-html {
-  scroll-behavior: smooth;
-}
-
-.container__imagen {
-  width: 100%;
-}
-
-.img-fluid {
-  width: 100%;
-  height: 100%;
-}
-
-.image-testimonio {
-  width: 100px;
-  height: 100px;
-  border-radius: 100px;
-  border-color: blue;
-}
-
-.card-img-top {
-  width: 50%;
-  width: 100px;
-  height: 100px;
-  border-radius: 100px;
-}
-
-/*# sourceMappingURL=style.css.map */
