--- a/assets/sass/components/_carousel.scss
+++ b/assets/sass/components/_carousel.scss
@@ -1,7 +1,3 @@
-.carousel-inner {
-    width: 300px;
-    height: 200px;
-    display: flex;
-    position: fixed;
-
+.carousel-indicators{
+    height: 500px;
 }
