--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,80 @@
-/* Error: expected more input.
- *    ,
- * 16 | //themes
- *    |         ^
- *    '
- *   assets/sass/main.scss 16:9  root stylesheet */
-
-body::before {
-  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
-      "Droid Sans Mono", monospace, monospace;
-  white-space: pre;
-  display: block;
-  padding: 1em;
-  margin-bottom: 1em;
-  border-bottom: 2px solid black;
-  content: "Error: expected more input.\a    \2577 \a 16 \2502  //themes\a    \2502          ^\a    \2575 \a   assets/sass/main.scss 16:9  root stylesheet";
+@charset "UTF-8";
+@import "../../node_modules/bootstrap/dist/css/bootstrap.css";
+/* MANIFIESTO main.scss */
+@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
+
+body {
+  background-color: #2e2d2d;
+  color: #ffffff;
+  font-family: "Raleway", sans-serif;
+  padding-left: 10%;
+  padding-right: 10%;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+.container__imagen {
+  width: 100%;
+}
+
+.img-fluid {
+  width: 100%;
+  height: 100%;
+}
+
+.image-testimonio {
+  width: 50%;
+  width: 100px;
+  height: 100px;
+  border-radius: 100px;
+}
+
+body {
+  font-family: "Raleway", sans-serif;
+  color: white;
+}
+
+.card-text {
+  color: white;
+}
+
+.testimonio-container {
+  display: flex;
+  justify-content: space-between; /* Espacio uniforme entre columnas */
+}
+
+.testimonio-column {
+  flex: 1; /* Cada columna toma una parte igual del espacio */
+  padding: 10px;
+  text-align: center;
+}
+
+.carousel-caption {
+  height: 300px;
+}
+
+/* Estilo para pantallas grandes */
+@media (min-width: 768px) {
+  .carousel-inner {
+    max-height: 500px;
+  }
+}
+/* Estilo para pantallas pequeñas */
+@media (max-width: 767px) {
+  .carousel-inner {
+    max-height: 300px;
+  }
+}
+.navbar {
+  padding-left: 10%;
+  padding-right: 10%;
+}
+
+/*# sourceMappingURL=style.css.map */
