--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -6,11 +6,14 @@
 //base
 @import "base/reset";
 @import "base/images";
+@import "base/typograpy";
 //layout
 
 @import "layout/main";
+@import "layout/testimonios";
 
 //components
-@import ""
+@import "components/carousel";
+@import "components/navbar";
 //pages
 //themes
