--- a/assets/sass/base/_images.scss
+++ b/assets/sass/base/_images.scss
@@ -7,11 +7,17 @@
     height: 100%;
 }
 
-.testimonio-images{
+.image-testimonio{
     width: 50%;
     width: 100px;
     height: 100px;
     border-radius: 100px;
- 
 }
 
+@media (min-width: 576px) {
+    .testimonio-container {
+      flex-direction: column;
+    }
+  
+    
+  }
