--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,20 +50,19 @@ body {
   color: white;
 }
 
-.testimonio-container {
+.testimonio__container--size {
   display: flex;
   flex-direction: row;
   text-align: center;
 }
 
-.testimonio-column {
+.testimonio__column--size {
   padding: 10px;
   flex: 50%;
 }
 
-/* Responsive layout - makes a one column-layout instead of two-column layout */
 @media (max-width: 500px) {
-  .testimonio-container {
+  .testimonio__container--size {
     flex-direction: column;
   }
 }
