--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,4 +1,4 @@
-@import "../../node_modules/bootstrap/dist/css/bootstrap.css";
+@import "../../node_modules/bootstrap/scss/bootstrap.scss";
 
 /* MANIFIESTO main.scss */
 //abstracts
